# Cellular-Outcomes-of-Perturbations

./: .gitattributes  .gitignore  CHANGES.md  DATA_README.md  DELTAAGE_LAB_NOTEBOOK.md  LICENSE  README.md  audit_metrics.py  demo.ipynb  diag_calibrators.py  diag_harmonize.py  diag_zero_point_results.json  dump_diag_bundle.py  dump_pool_diag.py  evaluate_only.py  overfit_check.py  pyproject.toml  requirements.txt  retrain_stage1.py  run_local.py  run_loocv.py  run_multi_local.py  scorecard.py  smoke_stage1.py  test11_1_time_isolation.py  test18_forward_gate.py  test4_1_generalization.py  test4_reproduce.py  test7_3_res_recal.py  test7_4_2_res_decompose.py  tests_13_16.py  verify_1a.py  verify_stage1_5.py  verify_stage1_5_results.json
.github/workflows/: ci.yml
cellfate_bundle/: meta.json  scalers.json
cellfate_bundle/members/: member_2.pt  member_4.pt
cellfate_fate/: dataset_summary.json  progress_tracker.json  scalers.json
cellfate_loocv_N2/: harmonization.json  progress_tracker.json
cellfate_loocv_N3/: dataset_summary.json  progress_tracker.json  scalers.json
cellfate_loocv_O2/: scalers.json
cellfate_loocv_Y1/: dataset_summary.json  progress_tracker.json  scalers.json
cellfate_loocv_Y2/: dataset_summary.json  progress_tracker.json
cellfate_multi/: dataset_summary.json  progress_tracker.json  scalers.json
cellfate_run/: dataset_summary.json  panel.json  progress_tracker.json  scalers.json
configs/: config.yaml
experiments/: DELTAAGE_LAB_NOTEBOOK.md  HOW_TO_RUN.txt  ISSUE2_DIAGNOSTIC_PLAN.md  diag_zero_point.py  new experiments notebook.MD  overfit_check.py  q_adaptive_feasibility.py  q_power_analysis.py  score + test 18.docx  test3_linearity.py  test5_ridge_gap.py  test6_beat_ridge.py  test7_1_safe_ranking.py  test7_2_res_isolation.py  test7_4_1_res_fixed_threshold.py  test7_4_3_bias_or_truth.py  test7_4_res_threshold.py  test7_ranking.py  test_suite.py
local_runners/: run_fate_local.py  run_multi_local.py  show_ui.py
loocv_results/: folds.json
plans/: 00_START_HERE.md  MASTER_PLAN.md  REF_ARCHITECTURE.md  REF_DATA_STRATEGY.md  REF_GROUND_RULES.md  STAGE_1_5_HARMONIZATION_AUDIT.md  STAGE_1_CALIBRATION.md  STAGE_1_DEVIATIONS.md  STAGE_2_LEVEL_CORRECTION.md  STAGE_3_TOOL.md  STAGE_4_VALIDATION.md  STAGE_5_PUBLICATION.md  STAGE_6_NEW_DATA.md
scorecard/: baseline.json
scripts/: build_dataset.py  evaluate.py  fit_clock.py  serve.py  train.py
tests/: conftest.py  test_audit_metrics.py  test_bars_resolvable.py  test_clock_and_reprogramming.py  test_constants.py  test_correctness.py  test_data_pipeline.py  test_data_units.py  test_diag_calibrators.py  test_diag_zero_point.py  test_dump_diag_bundle.py  test_dump_pool_diag.py  test_evaluation.py  test_fate_labels.py  test_harmonize.py  test_inference.py  test_io.py  test_models.py  test_panel.py  test_progress.py  test_scalers.py  test_schemas.py  test_scorecard_pooled.py  test_seeding.py  test_tf_encoder.py  test_training.py  test_verify_1a.py
(+202 files in other folders)
